--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: pepper
+  database: pepper_development
   pool: 5
   username: root
   password: '1234'
